# lumi-swarm

./: .clang-format  .gitignore  CMakeLists.txt
docs/: self-coding-roadmap.md
docs/superpowers/plans/: 2026-05-25-cuda-agent-swarm-first-milestone.md
docs/superpowers/specs/: 2026-05-25-cuda-agent-swarm-design.md
include/lumi/core/: backend.hpp  metrics.hpp  scheduler.hpp  types.hpp
src/core/: mock_backend.cpp  scheduler.cpp
tests/: test_build.cpp  test_cuda_smoke.cu  test_mock_backend.cpp  test_save_script.sh  test_scheduler.cpp
